# vala-panel-extras

./: .gitlab-ci.yml  CMakeLists.txt  README.md
applets/: CMakeLists.txt
applets/batt/: CMakeLists.txt  battery.vala  org.valapanel.battery.desktop.in  upower-iface.vala  vala-panel-extras-batt.desktop.in  vala-panel-extras-batt.vala
applets/gtop/: CMakeLists.txt  gtop.vala  org.valapanel.gtop.desktop.in
applets/volume/: CMakeLists.txt  vala-panel-extras-volume.vala  volume.vala
applets/weather/: CMakeLists.txt  org.valapanel.weather.desktop.in  weather-config.vala  weather-forecast.vala  weather.gresource.xml  weather.vala
applets/weather/ui/: config.ui  forecast.ui
applets/xkb/: CMakeLists.txt  config.ui  org.valapanel.xkb.desktop.in  xcb-xkb-fixes.vala  xkb-backend.vala  xkb-config.vala  xkb.gresource.xml  xkb.vala
archlinux/: PKGBUILD  PKGBUILD.all  PKGBUILD.battery  PKGBUILD.translations  PKGBUILD.volume  PKGBUILD.weather  PKGBUILD.xkb
data/gschemas/: CMakeLists.txt  org.valapanel.battery.gschema.xml  org.valapanel.gtop.gschema.xml  org.valapanel.plugins.gschema.xml  org.valapanel.volume.gschema.xml  org.valapanel.weather.gschema.xml  org.valapanel.xkb.gschema.xml
debian/: changelog  control  copyright  rules  vala-panel-extras-battery.1  vala-panel-extras-battery.install  vala-panel-extras-battery.manpages  vala-panel-extras-gtop.1  vala-panel-extras-gtop.install  vala-panel-extras-gtop.manpages  vala-panel-extras-volume.1  vala-panel-extras-volume.install  vala-panel-extras-volume.manpages  vala-panel-extras-weather.1  vala-panel-extras-weather.install  vala-panel-extras-weather.manpages  vala-panel-extras-xkb-flags.install  vala-panel-extras-xkb.1  vala-panel-extras-xkb.install  vala-panel-extras-xkb.manpages
debian/patches/: install-all-schemas-at-once.patch  series
lib/: CMakeLists.txt  application.vala  configurator.vala  menuserializer.vala  notifications.vala  snitemproxy.vala  watcheriface.vala
po/: CMakeLists.txt  ru.mo  ru.po  vala-panel-extras.pot  vala-panel.pot  zh_CN.po
rpm/: vala-panel-extras.spec.in
vapi/: libgtop-2.0.vapi  xcb-base.vapi  xcb-x11.deps  xcb-x11.vapi  xcb-xkb.deps  xcb-xkb.vapi  xcb.vapi  xkbcommon-x11.vapi  xkbcommon.vapi
