option(ENABLE_ALSA "Enable volume applet" ON)

if (ENABLE_ALSA)
    pkg_check_modules(ALSA alsa IMPORTED_TARGET)
    if (NOT(ALSA_FOUND))
        set(ENABLE_ALSA OFF)
    endif()
endif()

if (ENABLE_ALSA)
    pkg_check_modules(CANBERRA libcanberra IMPORTED_TARGET)
    if (CANBERRA_FOUND)
        set(CANBERRA_DEFINE -D CANBERRA)
        set(CANBERRA_PACKAGE "libcanberra")
    endif()
    add_subdirectory(volume)
endif()

option(ENABLE_BATTERY "Enable battery applet" ON)

if (ENABLE_BATTERY)
    add_subdirectory(batt)
endif()

option(ENABLE_WEATHER "Enable weather applet" ON)
if (ENABLE_WEATHER)
    pkg_check_modules(GWEATHER gweather-3.0 IMPORTED_TARGET)
    if (NOT(GWEATHER_FOUND))
        set(ENABLE_WEATHER OFF)
    endif()
endif()

if (ENABLE_WEATHER)
    add_subdirectory(weather)
endif()

option(ENABLE_XKB "Enable xkb applet" ON)
if (ENABLE_XKB)
    pkg_check_modules(XKB xkbcommon IMPORTED_TARGET)
    pkg_check_modules(X11 xcb-xkb xkbcommon-x11 x11-xcb gdk-x11-3.0 IMPORTED_TARGET)
    if (NOT(XKB_FOUND) OR NOT(X11_FOUND))
        set(ENABLE_XKB OFF)
    endif()
endif()

if (ENABLE_XKB)
    add_subdirectory(xkb)
endif()

option(ENABLE_LIBGTOP "Enable netload applet" ON)
if (ENABLE_LIBGTOP)
    pkg_check_modules(LIBGTOP libgtop-2.0 IMPORTED_TARGET)
    if (NOT(LIBGTOP_FOUND))
        set(ENABLE_LIBGTOP OFF)
    endif()
endif()

if (ENABLE_LIBGTOP)
    add_subdirectory(gtop)
endif()
